rev 12-Feb_16-18_45

8 Sep
This distribution marks the changeover to a single distribution of fckgLite based on the jQuery branch of fckgLiteSafe.

14 Sep
Fix to fckdialog.html, where JQuery-like syntax $(id) caused Javascript error in IE 9.  Fixed font plugin,
which failed in FireFox 6 because it fails to recgnize the deprecated font tag.

17 Sep
Some clean-up and minor edits in meta.php and edit.php

18 Sep
Revised method of detecting whether or not an installation of fckgLite is using the upgraded safe encoding
algorithm.

22 Sep
Added short-cut keys: ALT+- for creating new ordered list; ALT+* for creating new unordered list.  The mnemonics are the
Dokuwiki editor's codes for ordered and unordered lists.

23 Sep
Fixes for updated font tool.  Fonts can no longer take DW text formatting.

26 Oct
Fixed bug in nested list, where a list item ending in a link preceding nested item failed to move to
a new line causing the nested item to appear in the saem line as the link.

28 Oct
Upgraded security to deny guest uploads.

30 Oct
Added name="do[save]" to fckg editor's save button 

1 Nov
Removed stet and create functions from FCKeditor plugin tool.  Allows for editing of standard syntax plugins
and for removing <plugin . . .> . . .</plugin> markup from plugins escaped with old create function. 
The latter is for backward compatiblity.

6 Nov
Removed extraneous coding from FCKeditor keypress handling. In fckeditor.html all coding respecting
keypress handling has been removed along with loading of dataEvent.js, and helper.php has been updated to
register keypress events without reference to fckeditor.html.

8 Nov
Changed short-cut keys for insert lists from alt to ctrl to avoid conflicts with European keyboards
and revised get_showButtons (helper.php) for coding efficiency and set it on a 3 second timer
to make sure all inputs have been loaded before event handler has been assigned.

14 Nov