@@ -1,4 +1,4 @@
-rev 12-Feb_16-18_45
+rev 12-Feb_17-11_07
 
 8 Sep
 This distribution marks the changeover to a single distribution of fckgLite based on the jQuery branch of fckgLiteSafe.
@@ -115,3 +115,6 @@ after a superscript character inside a string).
 Italian language files contributed for settings and fckgLite GUI.  German GUI lang file updated.
 
 Fixed bug where external links to image files were re-configured as images after a re-load.
+
+17 Feb 2012
+In the case of linkonly images enabled user texts to replace image names in links (edit.php).
